@@ -81,6 +81,7 @@ AC_PROG_INSTALL
 AC_PROG_CPP
 AC_PROG_CXX
 AC_PROG_LIBTOOL
+AC_SYS_LARGEFILE
 
 # Initialize tool flags
 CFLAGS=""
