@@ -57,6 +57,7 @@ export CFLAGS
 
 AC_PROG_CPP
 AC_PROG_GCC_TRADITIONAL
+AC_SYS_LARGEFILE
 
 dnl Does this platform require array notation to assign to a va_list?
 dnl If cross-compiling, we assume va_list is "normal".  If this breaks
