@@ -12,6 +12,7 @@ AC_ISC_POSIX
 AC_PROG_CC
 AC_GCC_TRADITIONAL
 AM_C_PROTOTYPES
+AC_SYS_LARGEFILE
 
 dnl AM_DISABLE_SHARED
 AM_PROG_LIBTOOL
